--- a/portal-impl/src/portal-osgi-configuration.properties
+++ b/portal-impl/src/portal-osgi-configuration.properties
@@ -167,6 +167,10 @@
     #
     #configuration.override.com.liferay.analytics.settings.configuration.AnalyticsConfiguration_syncedOrderFieldNames=
     #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_ANALYTICS_PERIOD_SETTINGS_PERIOD_CONFIGURATION_PERIOD__UPPERCASEA_NALYTICS_UPPERCASEC_ONFIGURATION_UNDERLINE_SYNCED_UPPERCASEO_RDER_UPPERCASEI_TEM_UPPERCASEF_IELD_UPPERCASEN_AMES
+    #
+    #configuration.override.com.liferay.analytics.settings.configuration.AnalyticsConfiguration_syncedOrderItemFieldNames=
+    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_ANALYTICS_PERIOD_SETTINGS_PERIOD_CONFIGURATION_PERIOD__UPPERCASEA_NALYTICS_UPPERCASEC_ONFIGURATION_UNDERLINE_SYNCED_UPPERCASEP_RODUCT_UPPERCASEC_HANNEL_UPPERCASEF_IELD_UPPERCASEN_AMES
     #
     #configuration.override.com.liferay.analytics.settings.configuration.AnalyticsConfiguration_syncedProductChannelFieldNames=
@@ -210,54 +214,6 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_AMAZON_PERIOD_RANKINGS_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEA_MAZON_UPPERCASER_ANKINGS_UPPERCASEC_ONFIGURATION_UNDERLINE_ISBNS
     #
     #configuration.override.com.liferay.amazon.rankings.web.internal.configuration.AmazonRankingsConfiguration_isbns=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_BUDDY_UPPERCASEL_IST_UPPERCASEA_LLOWED_UPPERCASES_OCIAL_UPPERCASER_ELATION_UPPERCASET_YPES
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_buddyListAllowedSocialRelationTypes=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_BUDDY_UPPERCASEL_IST_UPPERCASEM_AX_UPPERCASEB_UDDIES
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_buddyListMaxBuddies=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_BUDDY_UPPERCASEL_IST_UPPERCASES_TRATEGY
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_buddyListStrategy=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_BUDDY_UPPERCASEL_IST_UPPERCASES_ITE_UPPERCASEE_XCLUDES
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_buddyListSiteExcludes=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASEE_NABLED
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberEnabled=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASEI_MPORT_UPPERCASEU_SER_UPPERCASEE_NABLED
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberImportUserEnabled=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASEH_OST
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberHost=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASEP_ORT
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberPort=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASER_ESOURCE
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberResource=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASES_ERVICE_UPPERCASEN_AME
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberServiceName=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASES_OCK_NUMBER5__UPPERCASEP_ROXY_UPPERCASEE_NABLED
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberSock5ProxyEnabled=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CHAT_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_HAT_UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_JABBER_UPPERCASES_OCK_NUMBER5__UPPERCASEP_ROXY_UPPERCASEP_ORT
-    #
-    #configuration.override.com.liferay.chat.internal.configuration.ChatGroupServiceConfiguration_jabberSock5ProxyPort=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_CURRENCY_PERIOD_CONVERTER_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEC_URRENCY_UPPERCASEC_ONVERTER_UPPERCASEC_ONFIGURATION_UNDERLINE_SYMBOLS
     #
@@ -2251,10 +2207,6 @@
     #
     #configuration.override.com.liferay.frontend.editor.ckeditor.web.internal.configuration.FFBalloonEditorConfiguration_enable=
     #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_FRONTEND_PERIOD_ICONS_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEF_RONTEND_UPPERCASEI_CONS_UPPERCASEP_ACKS_UPPERCASEC_ONFIGURATION_UNDERLINE_SELECTED_UPPERCASEI_CON_UPPERCASEP_ACKS
-    #
-    #configuration.override.com.liferay.frontend.icons.web.internal.configuration.FrontendIconsPacksConfiguration_selectedIconPacks=
-    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_FRONTEND_PERIOD_JS_PERIOD_A_NUMBER1__NUMBER1_Y_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEA__NUMBER1__NUMBER1_Y_UPPERCASEC_ONFIGURATION_UNDERLINE_TARGET
     #
     #configuration.override.com.liferay.frontend.js.a11y.web.internal.configuration.A11yConfiguration_target=
@@ -2910,10 +2862,6 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_KNOWLEDGE_PERIOD_BASE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEK__UPPERCASEB__UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_RSS_UPPERCASED_ISPLAY_UPPERCASES_TYLE
     #
     #configuration.override.com.liferay.knowledge.base.configuration.KBGroupServiceConfiguration_rssDisplayStyle=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_KNOWLEDGE_PERIOD_BASE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEK__UPPERCASEB__UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_RSS_UPPERCASEF_ORMAT
-    #
-    #configuration.override.com.liferay.knowledge.base.configuration.KBGroupServiceConfiguration_rssFormat=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_KNOWLEDGE_PERIOD_BASE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEK__UPPERCASEB__UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_RSS_UPPERCASEF_EED_UPPERCASET_YPE
     #
@@ -6383,13 +6331,13 @@
     #
     #configuration.override.com.liferay.saml.opensaml.integration.internal.transport.configuration.HttpClientFactoryConfiguration_soTimeout=
     #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_SEARCH_PERIOD_EXPERIENCES_PERIOD_CONFIGURATION_PERIOD__UPPERCASES_EMANTIC_UPPERCASES_EARCH_UPPERCASEC_ONFIGURATION_UNDERLINE_SENTENCE_UPPERCASET_RANSFORMER_UPPERCASEE_NABLED
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_SEARCH_PERIOD_EXPERIENCES_PERIOD_CONFIGURATION_PERIOD__UPPERCASES_EMANTIC_UPPERCASES_EARCH_UPPERCASEC_ONFIGURATION_UNDERLINE_TEXT_UPPERCASEE_MBEDDINGS_UPPERCASEE_NABLED
     #
-    #configuration.override.com.liferay.search.experiences.configuration.SemanticSearchConfiguration_sentenceTransformerEnabled=
+    #configuration.override.com.liferay.search.experiences.configuration.SemanticSearchConfiguration_textEmbeddingsEnabled=
     #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_SEARCH_PERIOD_EXPERIENCES_PERIOD_CONFIGURATION_PERIOD__UPPERCASES_EMANTIC_UPPERCASES_EARCH_UPPERCASEC_ONFIGURATION_UNDERLINE_SENTENCE_UPPERCASET_RANSFORMER
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_SEARCH_PERIOD_EXPERIENCES_PERIOD_CONFIGURATION_PERIOD__UPPERCASES_EMANTIC_UPPERCASES_EARCH_UPPERCASEC_ONFIGURATION_UNDERLINE_TEXT_UPPERCASEE_MBEDDING_UPPERCASEP_ROVIDER
     #
-    #configuration.override.com.liferay.search.experiences.configuration.SemanticSearchConfiguration_sentenceTransformer=
+    #configuration.override.com.liferay.search.experiences.configuration.SemanticSearchConfiguration_textEmbeddingProvider=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_SEARCH_PERIOD_EXPERIENCES_PERIOD_CONFIGURATION_PERIOD__UPPERCASES_EMANTIC_UPPERCASES_EARCH_UPPERCASEC_ONFIGURATION_UNDERLINE_HUGGING_UPPERCASEF_ACE_UPPERCASEA_CCESS_UPPERCASET_OKEN
     #
