--- a/portal-web/poshi.properties
+++ b/portal-web/poshi.properties
@@ -5,6 +5,7 @@ test.dirs=\
     ../modules/apps/address/address-test/src/testFunctional,\
     ../modules/apps/asset/asset-auto-tagger-google-cloud-natural-language-test/src/testFunctional,\
     ../modules/apps/asset/asset-auto-tagger-test/src/testFunctional,\
+    ../modules/apps/batch-engine/batch-engine-test/src/testFunctional,\
     ../modules/apps/batch-planner/batch-planner-test/src/testFunctional,\
     ../modules/apps/bulk/bulk-selection-test/src/testFunctional,\
     ../modules/apps/calendar/calendar-web-test/src/testFunctional,\
