--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -14293,6 +14293,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Select t
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Select the scope of the action that this role can perform on the <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Select the scope of the action that this role can perform on the <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Select the scope of the action that this role can perform on the <em>{0}</em> resource.
+select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used.
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Select the sites where this role can perform the <em>{0}</em> action on the {1} portlet.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Select the sites where this role can perform the <em>{0}</em> action on the {1} resource.
