--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-test/build.gradle
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-test/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+	testIntegrationCompile project(":apps:data-engine:data-engine-rest-api")
 	testIntegrationCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-api")
 	testIntegrationCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-form-field-type-api")
 	testIntegrationCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-test-util")
