--- a/modules/apps/journal/journal-test-util/build.gradle
+++ b/modules/apps/journal/journal-test-util/build.gradle
@@ -2,12 +2,15 @@ dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.test", version: "default"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
+	compileOnly project(":apps:data-engine:data-engine-rest-api")
+	compileOnly project(":apps:data-engine:data-engine-rest-test-util")
 	compileOnly project(":apps:dynamic-data-mapping:dynamic-data-mapping-api")
 	compileOnly project(":apps:dynamic-data-mapping:dynamic-data-mapping-test-util")
 	compileOnly project(":apps:journal:journal-api")
 	compileOnly project(":apps:layout:layout-display-page-api")
 	compileOnly project(":apps:layout:layout-test-util")
 	compileOnly project(":apps:rss:rss-api")
+	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-string")
 }
 
