LPS-166729 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Check to view the list records i
 check-token=Check Image Token
 check-url=Check URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Check your email</a> or <a href="{1}">configure email accounts.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term.
 checkbox=Checkbox
 checkbox-field-type-description=Select from two possible values.
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13926,6 +13927,7 @@ search-entries=Search Entries
 search-everywhere=Search Everywhere
 search-experiences=Search Experiences
 search-feeds=Search Feeds
+search-field-is-empty=Search field is empty. All fields are listed.
 search-file-entries=Search File Entries
 search-folder=Search Folder
 search-folders=Search Folders
@@ -17128,6 +17130,7 @@ there-are-no-resolved-suggestions=There are no resolved suggestions.
 there-are-no-resources=There are no resources.
 there-are-no-restrictions=There are no restrictions.
 there-are-no-results=There are no results.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}.
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term.
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results.
 there-are-no-results-with-these-attributes=There are no results with these attributes. Adjust your filters to broaden your results.
@@ -19323,6 +19326,7 @@ x-result-for-x={0} Result for {1}
 x-results={0} Results
 x-results-for={0} Results for
 x-results-for-x={0} Results for {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}.
 x-review-a-x={0} needs to review the {1}.
 x-revisions={0} Revisions
 x-role={0} Role
