--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce Products Upload
 analyzer=Analyzer
 analyzer-help=Specify the analyzer to use on the input document's fields. If left blank, this defaults to the analyzer associated with the first entry in the fields configuration.
 and=And
-and-contains=AND contains
+and-contains=And Contains
 and-operator=And Operator
 and-or-operator=And/Or Operator
 and-then-by=And Then By
