--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6497,6 +6497,11 @@
     feature.flag.LPS-165493=false
 
     #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER5__NUMBER8__NUMBER5__NUMBER0_
+    #
+    feature.flag.LPS-165850=false
+
+    #
     # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER6__NUMBER0__NUMBER3__NUMBER6_
     #
     feature.flag.LPS-166036=false
