--- a/modules/apps/batch-engine/batch-engine-service/build.gradle
+++ b/modules/apps/batch-engine/batch-engine-service/build.gradle
@@ -4,13 +4,14 @@ buildService {
 
 dependencies {
 	compileInclude group: "commons-io", name: "commons-io", version: "2.11.0"
+	compileInclude group: "org.apache.commons", name: "commons-collections4", version: "4.4"
 
 	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: "2.13.4"
 	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-core", version: "2.13.4"
 	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.13.4.2"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "com.zaxxer", name: "SparseBitSet", version: "1.2"
-	compileOnly group: "org.apache.commons", name: "commons-collections4", version: "4.4"
+	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.1"
 	compileOnly group: "org.apache.commons", name: "commons-compress", version: "1.21"
 	compileOnly group: "org.apache.commons", name: "commons-csv", version: "1.9.0"
 	compileOnly group: "org.apache.httpcomponents", name: "httpclient", version: "4.5.13"
