--- a/modules/apps/staging/staging-taglib/build.gradle
+++ b/modules/apps/staging/staging-taglib/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-react")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-soy")
 	compileOnly project(":apps:frontend-taglib:frontend-taglib-util")
+	compileOnly project(":apps:layout:layout-api")
 	compileOnly project(":apps:layout:layout-taglib")
 	compileOnly project(":apps:staging:staging-api")
 	compileOnly project(":core:petra:petra-function")
