--- a/test.properties
+++ b/test.properties
@@ -3881,6 +3881,7 @@
             (testray.main.component.name ~ "Control Menu") OR \
             (testray.main.component.name ~ "Display Pages") OR \
             (testray.main.component.name ~ "Fragments") OR \
+            (testray.main.component.name ~ "Headless Echo") OR \
             (testray.main.component.name ~ "Highest Rated Assets") OR \
             (testray.main.component.name ~ "IFrame Portlet") OR \
             (testray.main.component.name ~ "Localization") OR \
@@ -3967,6 +3968,7 @@
             (testray.main.component.name ~ "Content and Application Templates") OR \
             (testray.main.component.name ~ "Display Pages") OR \
             (testray.main.component.name ~ "Fragments") OR \
+            (testray.main.component.name ~ "Headless Echo") OR \
             (testray.main.component.name ~ "Highest Rated Assets") OR \
             (testray.main.component.name ~ "IFrame Portlet") OR \
             (testray.main.component.name ~ "Localization") OR \
