LPS-169409 Declare new echo-headless routine

--- a/ci.properties
+++ b/ci.properties
@@ -55,6 +55,7 @@ ci.test.available.suites=\
     echo,\
     echo-acceptance,\
     echo-db-partition,\
+    echo-headless,\
     echo-upgrade,\
     environments,\
     export-import,\
@@ -217,6 +218,7 @@ ci.test.suite.description[drools]=Test Drools tests.
 ci.test.suite.description[echo]=Test all Echo (WCM) team tests.
 ci.test.suite.description[echo-acceptance]=Test Echo (WCM) team acceptance tests.
 ci.test.suite.description[echo-db-partition]=Test Echo (WCM) team acceptance tests with Database Partitioning.
+ci.test.suite.description[echo-headless]=Test Echo (WCM) team headless components.
 ci.test.suite.description[echo-upgrade]=Test Echo (WCM) team upgrade tests.
 ci.test.suite.description[environments]=Test environment acceptance functional tests on all available environment stacks.
 ci.test.suite.description[export-import]=Test exportimport tests.
