LPS-171459 Add language key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7241,6 +7241,7 @@ go-back=Go Back
 go-to-answers=Go to Answers
 go-to-category=Go to Category
 go-to-dashboard-pages=Go to Dashboard Pages
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats.
 go-to-folder=Go to Folder
 go-to-live=Go to Live
 go-to-marketplace=Go to Marketplace
