LRQA-78897 Auto-run team test suite, relevant, and sf for liferay-data-engine, liferay-forms, and liferay-workflow

--- a/ci.properties
+++ b/ci.properties
@@ -1,6 +1,8 @@
 ci.test.auto.recipients=\
     liferay-appsec[relevant:security:sf:stable],\
     liferay-core-infra[relevant:sf],\
+    liferay-data-engine[data-engine:relevant:sf],\
+    liferay-forms[forms:relevant:sf],\
     liferay-frontend[relevant:sf],\
     liferay-objects[object:relevant:sf],\
     liferay-publications[publications:relevant:sf],\
@@ -8,7 +10,7 @@ ci.test.auto.recipients=\
     liferay-staging[relevant:sf:stable:staging],\
     liferay-uniform[relevant:sf:upgrade],\
     liferay-usm[relevant:sf],\
-    liferay-workflow[sf],\
+    liferay-workflow[workflow:relevant:sf],\
     pyoo47[relevant:sf]
 
 ci.test.available.suites=\
