--- a/test.properties
+++ b/test.properties
@@ -3840,6 +3840,13 @@
         **/asset/**/*Test.java,\
         **/asset-tags-validator/**/*Test.java,\
         **/fragment/**/*Test.java,\
+        **/headless/headless-admin-content/**/*Test.java,\
+        **/headless/headless-admin-taxonomy/**/*Test.java,\
+        **/headless/headless-delivery/**/*ContentSetElement*Test.java,\
+        **/headless/headless-delivery/**/*Language*Test.java,\
+        **/headless/headless-delivery/**/*NavigationMenu*Test.java,\
+        **/headless/headless-delivery/**/*SitePage*Test.java,\
+        **/headless/headless-delivery/**/*StructuredContent*Test.java,\
         **/iframe/iframe-web/**/*Test.java,\
         **/info/**/*Test.java,\
         **/journal/**/*Test.java,\
