LPS-169409 Add headless integration tests to echo-headless batch

--- a/test.properties
+++ b/test.properties
@@ -4092,6 +4092,15 @@
     # Echo Headless
     #
 
+    test.batch.class.names.includes[echo-headless]=\
+        **/headless/headless-admin-content/**/*Test.java,\
+        **/headless/headless-admin-taxonomy/**/*Test.java,\
+        **/headless/headless-delivery/**/*ContentSetElement*Test.java,\
+        **/headless/headless-delivery/**/*Language*Test.java,\
+        **/headless/headless-delivery/**/*NavigationMenu*Test.java,\
+        **/headless/headless-delivery/**/*SitePage*Test.java,\
+        **/headless/headless-delivery/**/*StructuredContent*Test.java
+
     test.batch.dist.app.servers[echo-headless]=tomcat
 
     test.batch.names[echo-headless]=\
