LPS-171583 Add language key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -1135,6 +1135,7 @@ advanced-css-styling=Advanced CSS Styling
 advanced-file-system-store-configuration-name=Advanced File System Store
 advanced-properties=Advanced Properties
 advanced-reply=Advanced Reply
+advanced-rule=Advanced Rule
 advanced-selection=Advanced Selection
 advanced-styling=Advanced Styling
 aes256-key=AES-256 Key
