LPS-167535 Use Picker component to render pages type selector

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11658,6 +11658,7 @@ pages-option=Pages Option
 pages-options=Pages Options
 pages-to-export=Pages to Export
 pages-to-publish=Pages to Publish
+pages-type=Pages Type
 pages-variations-help=Site pages variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your site pages variations. Publication to live of any site pages variation can be scheduled or done manually.
 pages-with-tag-x=Pages with tag <em>{0}</em>.
 pages-with-x-x=Pages with {0} <em>{1}</em>.
@@ -14242,7 +14243,6 @@ select-order-type=Select Order Type
 select-other-item=Select Other Item
 select-page=Select Page
 select-page-template-set=Select Page Template Set
-select-pages=Select Pages
 select-parent=Select Parent
 select-parent-site=Select Parent Site
 select-poll=Select Poll
