--- a/modules/apps/knowledge-base/knowledge-base-web/build.gradle
+++ b/modules/apps/knowledge-base/knowledge-base-web/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:application-list:application-list-api")
+	compileOnly project(":apps:asset:asset-api")
 	compileOnly project(":apps:asset:asset-display-page-api")
 	compileOnly project(":apps:asset:asset-info-api")
 	compileOnly project(":apps:asset:asset-info-display-api")
