LPS-171482 getting picklist options from object

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-field-type/build.gradle
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-field-type/build.gradle
@@ -20,7 +20,9 @@ dependencies {
 	compileOnly project(":apps:item-selector:item-selector-criteria-api")
 	compileOnly project(":apps:journal:journal-api")
 	compileOnly project(":apps:journal:journal-item-selector-api")
+	compileOnly project(":apps:list-type:list-type-api")
 	compileOnly project(":apps:map:map-api")
+	compileOnly project(":apps:object:object-api")
 	compileOnly project(":apps:static:osgi:osgi-util")
 	compileOnly project(":apps:trash:trash-api")
 	compileOnly project(":core:osgi-service-tracker-collections")
