--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -7775,7 +7775,7 @@ import-siteminder-users-from-ldap-help=If this is checked, users authenticated f
 import-status=Import Status
 import-structure=Import Structure
 import-task-isolation=Import Task Isolation Level
-import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations.
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations.
 import-translation=Import Translation
 import-translations=Import Translations
 import-user-preferences-help=User preferences can only be successfully imported when the user UUIDs match.
