--- a/build.xml
+++ b/build.xml
@@ -922,7 +922,7 @@ This target has been renamed to "snapshot-bundle". Please call "snapshot-bundle"
 		<ant dir="util-taglib" inheritAll="false" target="publish-portal-release" />
 	</target>
 
-	<target name="publish-sample-workspaces">
+	<target name="publish-workspaces">
 		<tstamp>
 			<format pattern="yyyyMMdd.kkmm" property="tstamp.value" />
 		</tstamp>
