LPS-169505 Auto. Include feature flag in portal.properties

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6351,6 +6351,11 @@
     feature.flag.LPS-114786=false
 
     #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER1__NUMBER9__NUMBER3__NUMBER8__NUMBER2_
+    #
+    feature.flag.LPS-119382=false
+
+    #
     # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER3__NUMBER5__NUMBER4__NUMBER3__NUMBER0_
     #
     feature.flag.LPS-135430=false
