--- a/modules/util/portal-tools-db-upgrade-client/properties/portal-upgrade-database.properties
+++ b/modules/util/portal-tools-db-upgrade-client/properties/portal-upgrade-database.properties
@@ -48,7 +48,7 @@
 ##
 
     #jdbc.default.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-    #jdbc.default.url=jdbc:sqlserver://localhost;databaseName=lportal?useBulkCopyForBatchInsert=true
+    #jdbc.default.url=jdbc:sqlserver://localhost;databaseName=lportal;useBulkCopyForBatchInsert=true
     #jdbc.default.username=sa
     #jdbc.default.password=
 
