--- a/modules/util/portal-tools-db-upgrade-client/properties/portal-upgrade-database.properties
+++ b/modules/util/portal-tools-db-upgrade-client/properties/portal-upgrade-database.properties
@@ -12,7 +12,7 @@
 ##
 
     #jdbc.default.driverClassName=org.mariadb.jdbc.Driver
-    #jdbc.default.url=jdbc:mariadb://localhost/lportal?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
+    #jdbc.default.url=jdbc:mariadb://localhost/lportal?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&useFastDateParsing=false
     #jdbc.default.username=
     #jdbc.default.password=
 
