LPS-171658 Update Search Upgrade batches and PQL

--- a/test.properties
+++ b/test.properties
@@ -7160,13 +7160,13 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         functional-ubuntu22-tomcat90-mysql57-jdk8,\
         functional-upgrade-jboss73-mysql57-jdk8,\
         functional-upgrade-jboss74-mysql57-jdk8,\
-        functional-upgrade-tomcat90-mariadb104-jdk8,\
-        functional-upgrade-tomcat90-mariadb106-jdk8,\
+        functional-upgrade-tomcat90-db2111-jdk8,\
+        functional-upgrade-tomcat90-mariadb102-jdk8,\
         functional-upgrade-tomcat90-mysql57-jdk8,\
         functional-upgrade-tomcat90-oracle193-jdk8,\
-        functional-upgrade-tomcat90-postgresql121-jdk8,\
+        functional-upgrade-tomcat90-postgresql134-jdk8,\
+        functional-upgrade-tomcat90-postgresql144-jdk8,\
         functional-upgrade-tomcat90-sqlserver2017-jdk8,\
-        #functional-upgrade-tomcat90-sybase160-jdk8,\
         functional-upgrade-weblogic122-mysql57-jdk8,\
         #functional-upgrade-weblogic141-mysql57-jdk8,\
         functional-upgrade-websphere90-mysql57-jdk8,\
@@ -7214,20 +7214,58 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
     test.batch.run.property.query[functional-ubuntu*][search-environments]=\
         ${test.batch.run.property.query[functional-centos8-tomcat90-mysql57-jdk8][search-environments]}
 
+    test.batch.run.property.query[functional-upgrade-jboss*][search--environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (\
+            (app.server.types == null) OR \
+            (app.server.types ~ jboss)\
+        ) AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
+    test.batch.run.property.query[functional-upgrade-tomcat90-db2111-jdk8][search-environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (database.types ~ db2) AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
+    test.batch.run.property.query[functional-upgrade-tomcat90-mariadb102-jdk8][search-environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (database.types ~ mariadb) AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
+    test.batch.run.property.query[functional-upgrade-tomcat90-mysql57-jdk8][search-environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
     test.batch.run.property.query[functional-upgrade-tomcat90-oracle193-jdk8][search-environments]=\
         (custom.properties != "upgrade.database.auto.run=true") AND \
         (database.types ~ oracle) AND \
-        (portal.suite.search.engine ~ elasticsearch7) AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
+    test.batch.run.property.query[functional-upgrade-tomcat90-postgresql*][search-environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (database.types ~ postgresql) AND \
         (testray.main.component.name ~ "Upgrades Search")
 
     test.batch.run.property.query[functional-upgrade-tomcat90-sqlserver2017-jdk8][search-environments]=\
         (custom.properties != "upgrade.database.auto.run=true") AND \
         (database.types ~ sqlserver) AND \
-        (portal.suite.search.engine ~ elasticsearch7) AND \
         (testray.main.component.name ~ "Upgrades Search")
 
-    test.batch.run.property.query[functional-upgrade-*][search-environments]=\
-        ${test.batch.run.property.query[functional-upgrade-tomcat90-mysql57-jdk8][search]}
+    test.batch.run.property.query[functional-upgrade-weblogic*][search-environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (\
+            (app.server.types == null) OR \
+            (app.server.types ~ weblogic)\
+        ) AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
+    test.batch.run.property.query[functional-upgrade-websphere90-mysql57-jdk8][search-environments]=\
+        (custom.properties != "upgrade.database.auto.run=true") AND \
+        (\
+            (app.server.types == null) OR \
+            (app.server.types ~ websphere)\
+        ) AND \
+        (testray.main.component.name ~ "Upgrades Search")
 
     test.batch.run.property.query[functional-weblogic*][search-environments]=\
         (${test.batch.run.property.query[functional-centos8-tomcat90-mysql57-jdk8][search-environments]}) AND \
