--- a/test.properties
+++ b/test.properties
@@ -6699,11 +6699,12 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         functional-tomcat90-sqlserver2019-jdk8,\
         functional-upgrade-jboss73-mysql57-jdk8,\
         functional-upgrade-jboss74-mysql57-jdk8,\
-        functional-upgrade-tomcat90-mariadb104-jdk8,\
-        functional-upgrade-tomcat90-mariadb106-jdk8,\
+        functional-upgrade-tomcat90-db2111-jdk8,\
+        functional-upgrade-tomcat90-mariadb102-jdk8,\
         functional-upgrade-tomcat90-mysql57-jdk8,\
         functional-upgrade-tomcat90-oracle193-jdk8,\
-        functional-upgrade-tomcat90-postgresql121-jdk8,\
+        functional-upgrade-tomcat90-postgresql134-jdk8,\
+        functional-upgrade-tomcat90-postgresql144-jdk8,\
         functional-upgrade-tomcat90-sqlserver2017-jdk8,\
         functional-upgrade-weblogic122-mysql57-jdk8,\
         #functional-upgrade-weblogic141-mysql57-jdk8,\
@@ -6737,11 +6738,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         (database.types ~ hypersonic) AND \
         (testray.main.component.name == "Publications")
 
-    test.batch.run.property.query[functional-tomcat90-mariadb104-jdk8][publications-environments]=\
-        (database.types ~ mariadb) AND \
-        (testray.main.component.name == "Publications")
-
-    test.batch.run.property.query[functional-tomcat90-mariadb106-jdk8][publications-environments]=\
+    test.batch.run.property.query[functional-tomcat90-mariadb*][publications-environments]=\
         (database.types ~ mariadb) AND \
         (testray.main.component.name == "Publications")
 
@@ -6788,11 +6785,11 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         ) AND \
         (testray.main.component.name == "Upgrades Publications")
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-mariadb104-jdk8][publications-environments]=\
-        (database.types ~ mariadb) AND \
+    test.batch.run.property.query[functional-upgrade-tomcat90-db2111-jdk8][publications-environments]=\
+        (database.types ~ db2) AND \
         (testray.main.component.name == "Upgrades Publications")
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-mariadb106-jdk8][publications-environments]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-mariadb102-jdk8][publications-environments]=\
         (database.types ~ mariadb) AND \
         (testray.main.component.name == "Upgrades Publications")
 
@@ -6803,7 +6800,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         (database.types ~ oracle) AND \
         (testray.main.component.name == "Upgrades Publications")
 
-    test.batch.run.property.query[functional-upgrade-tomcat90-postgresql121-jdk8][publications-environments]=\
+    test.batch.run.property.query[functional-upgrade-tomcat90-postgresql*-jdk8][publications-environments]=\
         (database.types ~ postgresql) AND \
         (testray.main.component.name == "Upgrades Publications")
 
