LPS-171562 Add coverage to search-experiences relevant suite

--- a/modules/dxp/apps/search-experiences/test.properties
+++ b/modules/dxp/apps/search-experiences/test.properties
@@ -6,6 +6,26 @@
 ##
 
 ##
+## Backend Tests
+##
+
+    modules.includes.required[relevant]=\
+        apps/portal-search,\
+        apps/portal-search-elasticsearch7
+
+##
+## Functional Tests
+##
+
+    test.batch.run.property.query[functional-tomcat*-mysql*-jdk8][relevant]=\
+        (test.class.name == Blueprints) OR \
+        (test.class.name == SemanticSearch)
+
+    test.batch.run.property.query[functional-upgrade-tomcat*-mysql*-jdk8][relevant]=\
+        (portal.suite.search.engine ~ "elasticsearch7") AND \
+        (testray.main.component.name ~ "Upgrades Search")
+
+##
 ## Testray
 ##
 
